[gd_scene load_steps=4 format=3 uid="uid://ca2gv3a66njm6"]

[ext_resource type="Script" path="res://addons/debug_info_plugin/DebugInfoEditorLog.gd" id="1_tp0pe"]

[sub_resource type="Image" id="Image_0bsw7"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 131, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 128, 128, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 93, 93, 55, 255, 97, 97, 58, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 98, 98, 47, 255, 97, 97, 42, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 94, 94, 46, 255, 93, 93, 236, 255, 93, 93, 233, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 93, 93, 252, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_6xvqt"]
image = SubResource("Image_0bsw7")

[node name="DebugInfoEditorLog" type="HBoxContainer"]
script = ExtResource("1_tp0pe")

[node name="HB" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBLeft" type="VBoxContainer" parent="HB"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_horizontal = 3

[node name="Log" type="RichTextLabel" parent="HB/VBLeft"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
theme_override_constants/text_highlight_h_padding = 0
theme_override_constants/text_highlight_v_padding = 0
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16
bbcode_enabled = true
scroll_following = true
context_menu_enabled = true
threaded = true
selection_enabled = true
deselect_on_focus_loss_enabled = false

[node name="SearchBox" type="LineEdit" parent="HB/VBLeft"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Filter Messages"
clear_button_enabled = true
right_icon = SubResource("ImageTexture_6xvqt")

[node name="VBRight" type="VBoxContainer" parent="HB"]
layout_mode = 2

[node name="HBTools" type="HBoxContainer" parent="HB/VBRight"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ClearButton" type="Button" parent="HB/VBRight/HBTools"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Clear Output"
focus_mode = 0
icon = SubResource("ImageTexture_6xvqt")
flat = true

[node name="CopyButton" type="Button" parent="HB/VBRight/HBTools"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Copy Selection"
focus_mode = 0
icon = SubResource("ImageTexture_6xvqt")
flat = true

[node name="HBTools2" type="HBoxContainer" parent="HB/VBRight"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CollapseButton" type="Button" parent="HB/VBRight/HBTools2"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Collapse duplicate messages into one log entry. Shows number of occurrences."
focus_mode = 0
toggle_mode = true
icon = SubResource("ImageTexture_6xvqt")
flat = true

[node name="ShowSearchButton" type="Button" parent="HB/VBRight/HBTools2"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Focus Search/Filter Bar"
focus_mode = 0
toggle_mode = true
button_pressed = true
icon = SubResource("ImageTexture_6xvqt")
flat = true

[node name="HSeparator" type="HSeparator" parent="HB/VBRight"]
layout_mode = 2

[node name="StdFilterButton" type="Button" parent="HB/VBRight"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Toggle visibility of standard output messages."
focus_mode = 0
theme_type_variation = &"EditorLogFilterButton"
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
toggle_mode = true
button_pressed = true
text = "0"
icon = SubResource("ImageTexture_6xvqt")

[node name="ErrorFilterButton" type="Button" parent="HB/VBRight"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Toggle visibility of standard output messages."
focus_mode = 0
theme_type_variation = &"EditorLogFilterButton"
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
toggle_mode = true
button_pressed = true
text = "0"
icon = SubResource("ImageTexture_6xvqt")

[node name="WarningFilterButton" type="Button" parent="HB/VBRight"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Toggle visibility of standard output messages."
focus_mode = 0
theme_type_variation = &"EditorLogFilterButton"
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
toggle_mode = true
button_pressed = true
text = "0"
icon = SubResource("ImageTexture_6xvqt")

[node name="EditorFilterButton" type="Button" parent="HB/VBRight"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Toggle visibility of standard output messages."
focus_mode = 0
theme_type_variation = &"EditorLogFilterButton"
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
toggle_mode = true
button_pressed = true
text = "0"
icon = SubResource("ImageTexture_6xvqt")

[node name="SaveStateTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="SaveStateTimer" to="." method="_save_state_"]
